--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -1,13 +1,7 @@
-.appBar{
-    background-color: red;//not working
-}
-
-
-
 .Bricks{
     font-size: 70px;
     text-align: center;
-    color: #ed4b82;
+    color: #ff926b;
 }
 .registerLink{
     color: blue;
