--- a/src/components/register/Register.scss
+++ b/src/components/register/Register.scss
@@ -1,6 +1,5 @@
 
 .body{
-
     text-align: center;
     margin-top: 10%;
 }
@@ -9,7 +8,7 @@
     font-size: 70px;
     text-align: center;
     font-family: 'Roboto';
-    color: #ed4b82;
+    color: #ff926b;
 }
 .registerLink{
     text-decoration: none;
@@ -20,6 +19,7 @@
 }
 .buttonConfirm{
     margin-top: 10px;
+    background-color:  #ff926b;
 }
 .headLine{
     font-size: "50px"
