--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -3,5 +3,29 @@
     height: 500px;
     width: 500px;
     display: flex;
-flex-direction: column;
-justify-content: space-evenly;}
+    flex-direction: column;
+    justify-content: space-evenly;
+    box-shadow: 0px 3px 20px -5px #888888
+}
+
+
+.buttonContent{
+    background-color: #ff926b;
+    width: 400px;
+    height: 80px;
+    font-size: 20px;
+    margin: 15px;
+    font-family: 'Source Sans Pro', sans-serif;    font-size: 30px;
+
+}
+
+.buttonsPlace{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+   
+}
+
+.userDetails{
+    font-size: 30px;
+    font-family: 'Source Sans Pro', sans-serif;}
