--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,7 +1,7 @@
 .content{
     background-color: #FFF3CD;
-    height: 500px;
-    width: 500px;
+    //height: 500px;
+    //width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
