--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
 
 
 html {
-  width: 1200px;
-  height: 768px;
+  /* width: 1500px; */
+  /* height: 768px; */
   margin: auto;
 }
 
 body {
- 
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
