--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -2,7 +2,7 @@
     background-color: #FFF3CD;
     //height: 500px;
     //width: 500px;
-    display: flex;
+    //display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     box-shadow: 0px 3px 20px -5px #888888
