--- a/src/components/createWorksheet/step_two/step_two.scss
+++ b/src/components/createWorksheet/step_two/step_two.scss
@@ -23,7 +23,52 @@
 }
 
 
-  .shadow4{
-    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1) inset;
+////////////////////
+  
+  .sp:hover{
+    color:#ffc38b;
   }
-
+  
+  span .sp{
+    border: 1px solid gold;
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  .redClass{
+    color: #ffc38b;
+    font-weight: 400;
+  }
+  
+  /* span:hover{
+    color: aqua;
+  } */
+  
+  .butt{
+    display: flex;
+    /* margin: 15px; */
+    width: 67px;
+    float: right;
+    height: 80px;
+    text-align: center;
+    font-size: large;
+    justify-content: center;
+  }
+  
+.sp{
+    margin-right: 10px;
+}
+#inputPlace{
+     flex: 3;
+    border: 0.5px solid #ccc;
+    padding: 8px;
+     font-size: 20px ;
+    
+     border-radius: 10px;
+}
